fix(style): fix-text-overlapping

--- a/src/styles/Banner.css
+++ b/src/styles/Banner.css
@@ -87,8 +87,8 @@
   .banner_subparent {
     flex-direction: column;
     align-items: center;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 5px;
+    padding-right: 5px;
   }
 
   .banner_imgdiv img {
